[VAS-754][VAS-851] chore: applied suggestions on branch